--- a/EmpManagementSystem/wwwroot/css/style.css
+++ b/EmpManagementSystem/wwwroot/css/style.css
@@ -10,12 +10,15 @@ header {
     padding: 10px;
     text-align: center;
     display: flex;
-    justify-content: center;
+    gap:20px;
     align-items: center;
+    
 }
 
+
 .logo {
-    width: 50px;
+    padding-left: 50px;
+    padding-right: 80px;
     height: 50px;
     margin-left: 10px;
 }
